--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   google_maps_flutter: ^2.5.0
   google_maps_webservice: ^0.0.20-nullsafety.5
   http: ^0.13.4
+  image_picker: ^1.1.2
+  firebase_storage: ^12.4.6
+
 
 
 
